k8sdeployment/kafka-exporter.yaml
# kafka-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-exporter
  namespace: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-exporter
  template:
    metadata:
      labels:
        app: kafka-exporter
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9308"
    spec:
      containers:
      - name: kafka-exporter
        image: danielqsj/kafka-exporter:latest
        args:
        - --kafka.server=4.232.129.207:29092  # Update with your Kafka bootstrap server
        - --topic.filter=.*
        - --group.filter=.*
        ports:
        - containerPort: 9308
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-exporter
  namespace: prometheus
  labels:
    app: kafka-exporter
spec:
  ports:
  - port: 9308
    targetPort: 9308
    name: http
  selector:
    app: kafka-exporter
