k8sdeployment/milvus-router-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: milvus-router
  namespace: genfied
  labels:
    app: milvus-router
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: milvus-router
